# mvm

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  repository-issue.md
.github/workflows/: tests.yml
examples/: allocator_usage.asm  hello_world.asm  hello_world.mvm  strings_comparison.asm
src/: cli.rs  main.rs
src/assembly/: error.rs  mod.rs
src/assembly/codegen/: mod.rs  structs.rs
src/assembly/lexer/: macros.rs  mod.rs  token.rs
src/assembly/parser/: expressions.rs  mod.rs
src/assembly/semantic/: macros.rs  mod.rs
src/vm/: allocator.rs  error.rs  execution.rs  interrupts.rs  isa.rs  memory.rs  mod.rs
